Updated tox.ini to successfully run tox on python 2.7 and 3.5

--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,8 @@
 envlist = py27, py35
 
 [testenv]
-commands = python imagersite/manage.py test
-deps =
-    django
-    factory-boy
+commands = python {toxinidir}/imagersite/manage.py test {toxinidir}/imagersite/
+deps = -r{toxinidir}/requirements.txt
 
 passenv =
     DATABASE_PASSWORD
