--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,13 @@ path.py==8.1.2
 pexpect==4.0.1
 pickleshare==0.6
 Pillow==3.2.0
+pluggy==0.3.1
 psycopg2==2.6.1
 ptyprocess==0.5.1
+py==1.4.31
 python-dateutil==2.5.2
 simplegeneric==0.8.1
 six==1.10.0
+tox==2.3.1
 traitlets==4.2.1
+virtualenv==15.0.1
