added postgresql services to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: python
 python:
   - "2.7"
   - "3.5"
+
+# ask for a postgresql database
+services:
+– postgresql
+
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
