--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ python:
   - "3.5"
 
 # ask for a postgresql database
-services:
-– postgresql
+services: postgresql
 
 # command to install dependencies
 install: "pip install -r requirements.txt"
