--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 decorator==4.0.9
+dj-database-url==0.4.1
 Django==1.9.5
 django-registration==2.0.4
 factory-boy==2.6.1
@@ -14,6 +15,7 @@ psycopg2==2.6.1
 ptyprocess==0.5.1
 py==1.4.31
 python-dateutil==2.5.2
+python-memcached==1.57
 simplegeneric==0.8.1
 six==1.10.0
 sorl-thumbnail==12.3
