--- a/tox.ini
+++ b/tox.ini
@@ -6,4 +6,6 @@ commands = python {toxinidir}/imagersite/manage.py test {toxinidir}/imagersite/
 deps = -r{toxinidir}/requirements.txt
 
 passenv =
-    DATABASE_PASSWORD
+    DEBUG
+    DATABASE_URL
+    SECRET_KEY
