--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+coverage==4.0.3
 decorator==4.0.9
 dj-database-url==0.4.1
 Django==1.9.5
--e git+https://github.com/WillWeatherford/django-imager.git@d40cad13c448abae0d7a687b604607d321b45b71#egg=Django_Imager
+-e git+https://github.com/WillWeatherford/django-imager.git@6d74540d6f7ec2f139d2714f9bfc4ec628d21db7#egg=Django_Imager
 django-registration==2.0.4
+djangorestframework==3.3.3
 factory-boy==2.6.1
 fake-factory==0.5.7
+httpie==0.9.3
 ipython==4.1.2
 ipython-genutils==0.1.0
 path.py==8.1.2
@@ -15,8 +18,12 @@ pluggy==0.3.1
 psycopg2==2.6.1
 ptyprocess==0.5.1
 py==1.4.31
+Pygments==2.1.3
+pytest==2.9.1
+pytest-cov==2.2.1
 python-dateutil==2.5.2
 python-memcached==1.57
+requests==2.9.1
 simplegeneric==0.8.1
 six==1.10.0
 sorl-thumbnail==12.3
