Added serializers for Photo and nested photo.

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,9 @@ envlist = py27, py35
 
 [testenv]
 commands = python {toxinidir}/imagersite/manage.py test {toxinidir}/imagersite/
-deps = -r{toxinidir}/requirements.txt
+deps =
+    -r{toxinidir}/requirements.txt
+    pytest
 
 passenv =
     DEBUG
